@startuml

title __ROLE's Class Diagram__\n

  namespace io.radien.webapp {
    namespace role {
      class io.radien.webapp.role.LazyRoleDataModel {
          {static} - serialVersionUID : long
          + LazyRoleDataModel()
          + getData()
      }
    }
  }
  

  namespace io.radien.webapp {
    namespace role {
      class io.radien.webapp.role.RoleConverter {
          + getAsObject()
          + getAsString()
      }
    }
  }
  

  namespace io.radien.webapp {
    namespace role {
      class io.radien.webapp.role.RoleDataModel {
          - lazyModel : LazyDataModel<? extends SystemRole>
          + delete()
          + edit()
          + editRecords()
          + getLazyModel()
          + getRole()
          + getSelectedRole()
          + getService()
          + init()
          + onRowSelect()
          + onload()
          + returnToDataTableRecords()
          + save()
          + setLazyModel()
          + setRole()
          + setSelectedRole()
          + setService()
      }
    }
  }
  

  io.radien.webapp.role.LazyRoleDataModel -up-|> io.radien.webapp.LazyAbstractDataModel
  io.radien.webapp.role.LazyRoleDataModel o-- io.radien.api.service.role.RoleRESTServiceAccess : service
  io.radien.webapp.role.RoleConverter .up.|> javax.faces.convert.Converter
  io.radien.webapp.role.RoleConverter o-- io.radien.api.service.role.RoleRESTServiceAccess : roleRESTServiceAccess
  io.radien.webapp.role.RoleDataModel .up.|> java.io.Serializable
  io.radien.webapp.role.RoleDataModel -up-|> io.radien.webapp.AbstractManager
  io.radien.webapp.role.RoleDataModel o-- io.radien.webapp.activeTenant.ActiveTenantDataModelManager : activeTenantDataModelManager
  io.radien.webapp.role.RoleDataModel o-- io.radien.api.model.role.SystemRole : role
  io.radien.webapp.role.RoleDataModel o-- io.radien.api.model.role.SystemRole : selectedRole
  io.radien.webapp.role.RoleDataModel o-- io.radien.api.service.role.RoleRESTServiceAccess : service


 

@enduml
